--- a/AshesiLibraryESP32/HTML/booktracking.html
+++ b/AshesiLibraryESP32/HTML/booktracking.html
@@ -4,149 +4,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Tracking and Alerting</title>
+    <title>Book Tracking</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
             margin: 0;
-            padding: 0;
+            font-family: 'Times New Roman', sans-serif;
+            background-color: #ffffff;
+            overflow: scroll;
         }
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #7B002C;
-            color: #fff;
-        }
-
-        .header img {
-            width: 50px;
-            height: auto;
-        }
-
-        .hero-section {
-            position: relative;
-            height: 300px;
-            background: url('library-building.jpg') center/cover no-repeat;
-            color: #fff;
+        #navbar {
+            background-color: #A5494D;
+            padding: 10px;
             text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            overflow: hidden;
+            position: relative;
+            z-index: 1;
         }
 
-        .resources-section {
-            display: flex;
-            justify-content: space-around;
-            margin: 20px 0;
+        #logo {
+            max-height: 10%;
+            max-width: 6%;
+            float: left;
         }
 
-        .resource-box {
-            flex: 1;
+        #bookDetails {
+            text-align: center;
+            margin-top: 50px;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: #ddd;
+            border: 1px solid #A5494D;
+            border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
         }
 
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #ffffff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-
-        h1 {
-            color: #7B002C;
-        }
-
-        button {
-            background-color: #7B002C;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
+        #setOffAlarm {
             margin-top: 20px;
-        }
-
-        .logo {
-            background-image: url('ashesi-logo.png');
-            width: 250px;
-            height: 70px;
-            background-size: cover;
+            padding: 10px;
+            background-color: #A5494D;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
     </style>
+    <script src="https://kit.fontawesome.com/a3c696c988.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="header">
-        <div class="logo"></div>
-        <div>
-            <a href="#">Contact Us</a>
-            <a href="#">Register/Login</a>
-        </div>
+    <!-- Top Menu -->
+    <div id="navbar">
+        <img id="logo" src="OIP.jpeg" alt="School Logo">
     </div>
 
-    <div class="hero-section">
-        <h1>ASHESI WARREN LIBRARY</h1>
-    </div>
+    <!-- Book Details -->
+    <div id="bookDetails">
+        <h2>Book Tracking Details</h2>
+        <p>RFID Tag: <span id="rfidTag">123456</span></p>
+        <p>ISBN: <span id="bookId">123456</span></p>
+        <p>Title: <span id="bookTitle">Sample Book</span></p>
+        <p>Author: <span id="author">John Doe</span></p>
+        <p>Publication Year: <span id="Year">Sample Book</span></p>
+        <p>Author: <span id="book_author">John Doe</span></p>
 
-    </div>
-
-    <div class="container">
-        <h1>Book Tracking and Alerting</h1>
-        <div class="book-list">
-            <ul id="tracked-books-list">
-                <!-- Book entries will be dynamically added here -->
-            </ul>
-        </div>
-        <button id="alert-button">Trigger Alert</button>
+        <!-- Set Off Alarm Button -->
+        <button id="setOffAlarm" onclick="setOffAlarm()">Set Alarm Off</button>
     </div>
 
     <script>
-        const trackedBooksList = document.getElementById("tracked-books-list");
-        const alertButton = document.getElementById("alert-button");
-
-        // Function to add a new tracked book entry
-        function addTrackedBook(title, author, timestamp) {
-            const bookEntry = document.createElement("li");
-            bookEntry.innerHTML = `
-                <div>
-                    <strong>Title:</strong> ${title}
-                    <br>
-                    <strong>Author:</strong> ${author}
-                </div>
-                <div>
-                    <strong>Timestamp:</strong> ${timestamp}
-                </div>
-            `;
-            trackedBooksList.appendChild(bookEntry);
+        // JavaScript code for handling alarm
+        function setOffAlarm() {
+            // Add logic to handle alarm, e.g., close the alarm or take appropriate action
+            alert('Alarm set off! Taking appropriate action...');
         }
-
-        // Simulate a tracked book being detected
-        function simulateTrackedBook() {
-            const book = {
-                title: "Software Engineering, TENTH edition",
-                author: "Ian Sommerville",
-                timestamp: new Date().toLocaleString()
-            };
-            addTrackedBook(book.title, book.author, book.timestamp);
-            triggerAlert();
-        }
-
-        // Function to trigger an alert when a book leaves the library
-        function triggerAlert() {
-            alert("Alert: Book moved without proper checkout!");
-        }
-
-        // Add an event listener to the "Trigger Alert" button
-        alertButton.addEventListener("click", simulateTrackedBook);
     </script>
 </body>
 
