--- a/AshesiLibraryESP32/HTML/Homepage_workstudy.html
+++ b/AshesiLibraryESP32/HTML/Homepage_workstudy.html
@@ -78,7 +78,7 @@ body {
       width: 80%; /* Use a percentage width for responsiveness */
       max-width: 600px; /* Set a maximum width to maintain a reasonable size on larger screens */
       margin: 50px auto;
-      margin-left:40%;
+      margin-left:35%;
       background-color: #d9d9d9; /* Grey background color for the container */
       padding: 20px;
       border: 2px solid #999; /* Border color for the container */
@@ -199,7 +199,7 @@ body {
 }
 
 #scheduleTable, #attendanceTable{
-  width: 80%;
+  width: 75%;
   margin: 20px auto;
   margin-left:20%;
   border-collapse: collapse;
@@ -259,12 +259,12 @@ body {
       <i class="fas fa-calendar"></i>
       View Schedule</a>
 
-    <a href="https://invence.ashesi.local:9192/user" style="text-decoration:none" target="_blank" style>
+    <a href="https://invence.ashesi.local:9192/user" style="text-decoration:none" target="_blank">
       <i class="fa-solid fa-print"></i>
       Web Print
     </a>
 
-    <a href="https://warrenlibraryseminarroom.simplybook.me/v2/" style="text-decoration:none" target="_blank" style>
+    <a href="https://warrenlibraryseminarroom.simplybook.me/v2/" style="text-decoration:none" target="_blank">
       <i class="fa-solid fa-house"></i>
       Booking Room
     </a>
