--- a/AshesiLibraryESP32/HTML/Faculty.html
+++ b/AshesiLibraryESP32/HTML/Faculty.html
@@ -70,11 +70,11 @@ body {
   color: #A5494D;
 }
 
-
+#ProfileViewing{
+  margin-top:10%;}
 .ViewProfile{
       width: 80%; /* Use a percentage width for responsiveness */
       max-width: 600px; /* Set a maximum width to maintain a reasonable size on larger screens */
-      margin-top:12%;
       margin: 50px auto;
       margin-left:35%;
       background-color: #d9d9d9; /* Grey background color for the container */
