--- a/AshesiLibraryESP32/HTML/FacultyIntern.html
+++ b/AshesiLibraryESP32/HTML/FacultyIntern.html
@@ -17,9 +17,11 @@ body {
   background-color: #A5494D;
   padding: 10px;
   text-align: center;
-  overflow: hidden;
-  position: relative; /* Set position to relative to allow z-index to work */
-  z-index: 1; /* Stay on top of everything */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 #logo {
@@ -49,6 +51,7 @@ body {
   position: fixed;
   z-index: 0;
   left: 2%;
+  top: 12%;
   background-color: #ffffff;
   border-right: 2px solid black;
   text-align: justify;
@@ -74,10 +77,9 @@ body {
 }
 
 .ViewProfile{
-      width: 80%; /* Use a percentage width for responsiveness */
-      max-width: 600px; /* Set a maximum width to maintain a reasonable size on larger screens */
+      width: 600px;
       margin: 50px auto;
-      margin-left:35%;
+      margin-top:10%;
       background-color: #d9d9d9; /* Grey background color for the container */
       padding: 20px;
       border: 2px solid #999; /* Border color for the container */
@@ -143,7 +145,11 @@ body {
     width: 90%; /* Adjust the width for smaller screens */
   }
 }
-
+    
+#ViewCatalog, #BorrowedBooks{
+  margin-top:10%;
+}
+    
 #Catalog, #booksTable{
   width: 75%;
   margin: 20px auto;
