--- a/AshesiLibraryESP32/HTML/Librarian.html
+++ b/AshesiLibraryESP32/HTML/Librarian.html
@@ -528,7 +528,7 @@ margin-top:10%;
     Book tracking
 </a>
 
-      <a href="#Log Out">
+      <a href="Userlogin.html">
       <i class="fas fa-power-off"></i>
       Log Out</a>
   </div>
