--- a/AshesiLibraryESP32/HTML/FacultyIntern.html
+++ b/AshesiLibraryESP32/HTML/FacultyIntern.html
@@ -236,7 +236,7 @@ body {
       Booking Room
     </a>
 
-    <a href="#Log Out">
+    <a href="Userlogin.html">
       <i class="fas fa-power-off"></i>
       Log Out</a>
   </div>
