--- a/AshesiLibraryESP32/HTML/Userlogin.html
+++ b/AshesiLibraryESP32/HTML/Userlogin.html
@@ -152,10 +152,11 @@
             <div class="form-group">
                 <label for="userType">Login as:</label>
                 <select id="userType">
-                    <option value="Librarian">Librarian</option>
+                    <option value="admin">Admin</option>
+                    <option value="librarian">Librarian</option>
                     <option value="student">Student</option>
                     <option value="staff">Staff/Faculty</option>
-                    <option value="Faculty Itern">Faculty Itern</option>
+                    <option value="facultyIntern">Faculty Intern</option>
                     <option value="guest">Guest</option>
                 </select>
             </div>
@@ -164,31 +165,84 @@
                 <input type="email" id="email" placeholder="Enter your email">
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Enter your password">
+                <label for="password">ID Number or Admin Password:</label>
+                <input type="password" id="password" placeholder="Enter your ID Number or Admin Password">
             </div>
             <div class="btn-container">
                 <button onclick="Login()">Login</button>
             </div>
 
             <div class="Register-link">
-                <p>You have no an account? <a href="#">Register here!</a></p>
+                <p>You have no account? <a href="#">Register here!</a></p>
                 <a href="#" class="forgot-password">Forgot Password?</a>
-</div>
             </div>
-            
         </div>
-
-        
     </div>
 
-   
+    <!-- Include Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
+
     <script>
-        // Add JavaScript functionality as needed
+        const firebaseConfig = {
+      apiKey: "AIzaSyCzSMSm6ZHGoLGA7AToiIMHByDFz9yIIbk",
+      authDomain: "ashesilibraryesp32-fd5b8.firebaseapp.com",
+      databaseURL:
+        "https://ashesilibraryesp32-fd5b8-default-rtdb.firebaseio.com",
+      projectId: "ashesilibraryesp32-fd5b8",
+      storageBucket: "ashesilibraryesp32-fd5b8.appspot.com",
+      messagingSenderId: "185836313770",
+      appId: "1:185836313770:web:ff9137a24273f2ed0844d3",
+      measurementId: "G-J8PWV52BJE",
+    };
+
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
         function Login() {
-            // Implement registration functionality
-            alert('Login button clicked!');
+            const userType = document.getElementById("userType").value;
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+            if (userType === "admin" && email === "admin@ashesi.edu.gh" && password === "admin1234") {
+                window.location.href = "admin.html";
+            } else {
+                // Authenticate user with email and password
+                firebase.auth().signInWithEmailAndPassword(email, password)
+                    .then((userCredential) => {
+                        // User authenticated successfully
+                        const user = userCredential.user;
+                        // Check user type and redirect to the respective landing page
+                        database.ref(`${userType}s/${user.uid}`).once("value")
+                            .then((snapshot) => {
+                                const userData = snapshot.val();
+
+                                if (userData) {
+                                    if (userType.toLowerCase() === "librarian") {
+                                        window.location.href = "Librarian.html";
+                                    } else if (userType.toLowerCase() === "student") {
+                                        window.location.href = "student.html";
+                                    } else if (userType.toLowerCase() === "staff") {
+                                        window.location.href = "Faculty.html";
+                                    } else if (userType.toLowerCase() === "facultyintern") {
+                                        window.location.href = "FacultyIntern.html";
+                                    } else {
+                                        // Handle other user types or show an error
+                                        console.error("Invalid user type");
+                                    }
+                                } else {
+                                    console.error("User not found in the database for the specified type");
+                                }
+                            });
+                    })
+                    .catch((error) => {
+                        // Handle errors (e.g., wrong credentials)
+                        console.error(error.message);
+                    });
+            }
         }
     </script>
 </body>
 </html>
+
