--- a/AshesiLibraryESP32/HTML/Librarian.html
+++ b/AshesiLibraryESP32/HTML/Librarian.html
@@ -494,6 +494,7 @@ margin-top:10%;
 <body>
 <div id="navbar">
     <img id="logo" src="OIP.jpeg" alt="School Logo">
+     <h1 style="color:white">WARREN LIBRARY | ADMIN</h1>
   </div>
 
   <!-- Side Navigation -->
