--- a/AshesiLibraryESP32/HTML/student.html
+++ b/AshesiLibraryESP32/HTML/student.html
@@ -208,6 +208,7 @@ body {
 <body>
   <div id="navbar">
     <img id="logo" src="OIP.jpeg" alt="School Logo">
+     <h1 style="color:white">WARREN LIBRARY | STUDENT</h1>
   </div>
 
   <!-- Side Navigation -->
