--- a/AshesiLibraryESP32/HTML/Faculty.html
+++ b/AshesiLibraryESP32/HTML/Faculty.html
@@ -207,6 +207,7 @@ body {
 <body>
   <div id="navbar">
     <img id="logo" src="OIP.jpeg" alt="School Logo">
+     <h1 style="color:white">WARREN LIBRARY | FACULTY</h1>
   </div>
 
   <!-- Side Navigation -->
