--- a/AshesiLibraryESP32/HTML/FacultyIntern.html
+++ b/AshesiLibraryESP32/HTML/FacultyIntern.html
@@ -210,6 +210,7 @@ body {
 <body>
   <div id="navbar">
     <img id="logo" src="OIP.jpeg" alt="School Logo">
+     <h1 style="color:white">WARREN LIBRARY | FACULTY INTERN</h1>
   </div>
 
   <!-- Side Navigation -->
