--- a/AshesiLibraryESP32/HTML/Homepage_workstudy.html
+++ b/AshesiLibraryESP32/HTML/Homepage_workstudy.html
@@ -239,6 +239,7 @@ body {
 
   <div id="navbar">
     <img id="logo" src="OIP.jpeg" alt="School Logo">
+     <h1 style="color:white">WARREN LIBRARY | WORKSTUDY</h1>
   </div>
 
   <!-- Side Navigation -->
