--- a/AshesiLibraryESP32/HTML/Librarian.html
+++ b/AshesiLibraryESP32/HTML/Librarian.html
@@ -566,8 +566,8 @@ margin-top:10%;
             <p><strong>ISBN:</strong> 0987654321</p>
             <p><strong>Publication Year:</strong> 2021</p>
             <p><strong>Availability:</strong> Available</p>
-             <label for="studentId" style="font-weight:bold">Student ID:</label>
-            <input type="text" id="StudentId" name="title"><br><br>
+             <label for="UserId" style="font-weight:bold">User ID:</label>
+            <input type="text" id="UserId" name="title"><br><br>
              <button id="CheckInButton">Check In</button>
          </div>
     </div>
