--- a/AshesiLibraryESP32/HTML/Librarian.html
+++ b/AshesiLibraryESP32/HTML/Librarian.html
@@ -587,9 +587,9 @@ margin-top:10%;
         <p><strong>Availability:</strong> Available</p>
         <!-- Additional book details can be added here -->
 
-        <!-- Display student information -->
-        <h2>Student Information</h2>
-        <p><strong>Student ID:</strong> 12342024</p>
+        <!-- Display user information -->
+        <h2>User Information</h2>
+        <p><strong>User ID:</strong> 12342024</p>
         <button id="CheckOutButton">Check Out</button>
     </div>
 </div>
