--- a/AshesiLibraryESP32/HTML/Librarian.html
+++ b/AshesiLibraryESP32/HTML/Librarian.html
@@ -574,7 +574,7 @@ margin-top:10%;
 
 <!-- Check Out-->
 <div id="CheckOut" style="display:none">
-        <input type="text" id="CheckOut_" placeholder="Enter book or student ID">
+        <input type="text" id="CheckOut_" placeholder="Enter book or user ID">
         <button id="SearchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
 
         <!-- Display book and student information for check-out -->
