--- a/AshesiLibraryESP32/HTML/Faculty.html
+++ b/AshesiLibraryESP32/HTML/Faculty.html
@@ -7,12 +7,14 @@
   <script src="https://kit.fontawesome.com/a3c696c988.js" crossorigin="anonymous"></script>
     <!-- CSS code-->
   <style>
+/* body styling */
 body {
   margin: 0;
   font-family: 'Times New Roman', sans-serif;
-  background-color: #ffffff; /* Set background color for the body */
+  background-color: #ffffff; 
 }
 
+  /* Style for the top menu */
 #navbar {
   background-color: #A5494D;
   padding: 10px;
@@ -27,7 +29,7 @@ body {
 #logo {
   max-height: 10%;
   max-width: 6%;
-  width: auto; /* Make width auto for responsiveness */
+  width: auto; 
   float: left;
 }
 
@@ -46,8 +48,8 @@ body {
 
 /* Style for the side navigation */
 #sidenav {
-  height: calc(100vh); /* Adjusted to use percentage */
-  width: 15%; /* Adjusted to use percentage */
+  height: calc(100vh); 
+  width: 15%; 
   position: fixed;
   z-index: 0;
   left: 2%;
@@ -70,6 +72,7 @@ body {
   color: #A5494D;
 }
 
+/* profile section styling */    
 #ProfileViewing{
   margin-top:10%;}
 .ViewProfile{
@@ -142,7 +145,8 @@ body {
     width: 90%; /* Adjust the width for smaller screens */
   }
 }
-    
+
+ /* Book search and borrowed books styling */   
  #ViewCatalog, #BorrowedBooks{
     margin-top:10%;
  }
