--- a/AshesiLibraryESP32/HTML/FacultyIntern.html
+++ b/AshesiLibraryESP32/HTML/FacultyIntern.html
@@ -27,7 +27,7 @@ body {
 #logo {
   max-height: 10%;
   max-width: 6%;
-  width: auto; /* Make width auto for responsiveness */
+  width: auto;
   float: left;
 }
 
@@ -46,8 +46,8 @@ body {
 
 /* Style for the side navigation */
 #sidenav {
-  height: calc(100vh); /* Adjusted to use percentage */
-  width: 15%; /* Adjusted to use percentage */
+  height: calc(100vh); 
+  width: 15%;
   position: fixed;
   z-index: 0;
   left: 2%;
